--- a/unit1_projects/stylesheets/blog_template.css
+++ b/unit1_projects/stylesheets/blog_template.css
@@ -1,24 +1,27 @@
 body {
 	background-color: #BDD2CC;
 }
-#header {
-	background-image:url('../images/skulls.png');
-	background-repeat: repeat;
-	text-align: center;
-	border-bottom:1px solid #423D99;
-	padding: 20px;
-	font-size: 30px;
-	line-height: 20px;
-	font-family:Ubuntu, Helvetica;
-}
 
 #container {
 	background-color: #fff;
 	margin-left: auto;
 	margin-right: auto;
-	width: 850px;
+	width: 80%;
 	border: 1px solid #423D99;
 }
+
+#header {
+	background-image:url('../images/skulls.png');
+	background-repeat: repeat;
+	text-align: center;
+	border-bottom:1px solid #423D99;
+	padding: 2%;
+	font-size: 30px;
+	line-height: 20px;
+	font-family:Ubuntu, Helvetica;
+}
+
+
 
 #sub-content {
 	padding-left: 50px;
@@ -29,7 +32,23 @@ body {
 
 }
 
+#sub-content img{
+	width: 100%;
+}
+
+.column1 {
+	width: 40%;
+	float: left;
+	clear:both;
+}
+
+.column2 {
+	width: 50%;
+	float: right;
+}
+
 #footer {
+	clear:both;
 	background-color: #8E9E9A;
 	font-size: 14px;
 	font-family:Ubuntu, Helvetica;
@@ -43,4 +62,31 @@ a:active: {color:#FFA200;}
 
 article h3{
 	color: #CC5814;
+}
+
+@media screen and (max-width: 568px){
+	h2,h3{
+		text-align: center;
+	}
+	h3{
+		font-size: 1.7em;
+	}
+	h1{
+		font-size:1.2em;
+	}
+	.column1,
+	.column2{
+		width:100%;
+		float:none;
+
+	}
+	#container{
+		width:100%;
+		margin-left: 0;
+		margin-right: 0;
+
+	}
+	article p{
+		text-align: justify;	
+	}
 }
